# SagittaEngine

./: .gitignore  CMakeLists.txt  README.md  readme.txt  sagitta_tmprj.tmproj
demo/: CMakeLists.txt
demo/Demo00_Triangle/: CMakeLists.txt  DemoTriangle.cpp  DemoTriangle.h  main.cpp
demo/Demo01_Lighting/: CMakeLists.txt  DemoLighting.cpp  DemoLighting.h  main.cpp
demo/Demo02_LoaderObj/: CMakeLists.txt  DemoLoaderObj.cpp  main.cpp
demo/Demo03_SkeletonAnimation/: CMakeLists.txt  DemoSkeletonAnimation.cpp  DemoSkeletonAnimation.h  main.cpp
demo/Demo04_GLSL/: CMakeLists.txt  DemoGLSL.cpp  DemoGLSL.h  main.cpp
demo/Demo05_Texture/: CMakeLists.txt  DemoTexture.cpp  DemoTexture.h  main.cpp
demo/Demo06_ShadowMap/: CMakeLists.txt  DemoShadowMap.cpp  DemoShadowMap.h  main.cpp
demo/Demo07_Ragdoll/: CMakeLists.txt  DemoRagdoll.cpp  DemoRagdoll.h  main.cpp
demo/DemoAllInOne/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
demo/DemoCore/: CMakeLists.txt  sgDemo.cpp  sgDemo.h  sgInputEvent.h  sgKeyDefine.h
demo/DemoCore/mac/: sgAppDelegate.h  sgAppDelegate.mm  sgCocoaToSagitta.h  sgCocoaToSagitta.mm  sgDemoMac.mm  sgNSOpenGLView.h  sgNSOpenGLView.mm
demo/DemoCore/win32/: sgDemoWin32.cpp  sgWin32GLWindow.cpp  sgWin32GLWindow.h  sgWin32ToSagitta.cpp  sgWin32ToSagitta.h
demo/DemoGLSL/: DemoGLSL.cpp
demo/DemoLighting/: CMakeLists.txt
demo/DemoLoaderObj/: DemoLoaderObj.cpp  DemoLoaderObj.h
demo/DemoSkeletonAnimation/: DemoSkeletonAnimation.cpp
demo/DemoTriangle/: main.cpp
src/engine/: CMakeLists.txt  math_serialization.h  sgEngine.cpp  sgEngine.h
src/engine/animation/: SAnimaJoint.cpp  SAnimaJoint.h  SAnimation.cpp  SAnimation.h  SMotionClip.cpp  SMotionClip.h  sgAnimaJoint.cpp  sgAnimaJoint.h  sgAnimation.cpp  sgAnimation.h  sgMotionClip.cpp  sgMotionClip.h
src/engine/buffer/: SBuffer.cpp  SBuffer.h  SFrameBuffer.cpp  SFrameBuffer.h  SFrameBufferManager.cpp  SFrameBufferManager.h  SVertexBufferElement.cpp  SVertexBufferElement.h  SVertexData.cpp  SVertexData.h  SVertexIndexBuffer.cpp  SVertexIndexBuffer.h  sgBuffer.cpp  sgBuffer.h  sgFrameBuffer.cpp  sgFrameBuffer.h  sgFrameBufferManager.cpp  sgFrameBufferManager.h  sgVertexBufferElement.cpp  sgVertexBufferElement.h  sgVertexData.cpp  sgVertexData.h  sgVertexIndexBuffer.cpp  sgVertexIndexBuffer.h
src/engine/common/: Singleton.h  sgBitOP.h  sgClassMeta.cpp  sgClassMeta.h  sgDelegate.cpp  sgDelegate.h  sgException.h  sgIOUtil.cpp  sgIOUtil.h  sgLogSystem.cpp  sgLogSystem.h  sgMalloc.cpp  sgMalloc.h  sgMemChoc.cpp  sgMemChoc.h  sgMemObject.cpp  sgMemObject.h  sgObject.cpp  sgObject.h  sgObjectCenter.cpp  sgObjectCenter.h  sgStlAllocator.h  sgStrHandle.cpp  sgStrHandle.h  sgStringUtil.cpp  sgStringUtil.h  sgUtil.cpp  sgUtil.h  tmp_define.h
src/engine/component/: sgAnimationComponent.cpp  sgAnimationComponent.h  sgCameraComponent.cpp  sgCameraComponent.h  sgComponent.cpp  sgComponent.h  sgLightComponent.cpp  sgLightComponent.h  sgMeshComponent.cpp  sgMeshComponent.h  sgRenderStateComponent.cpp  sgRenderStateComponent.h  sgRigidBodyComponent.cpp  sgRigidBodyComponent.h
src/engine/io/: SFile.cpp  SFile.h  sgFile.cpp  sgFile.h
src/engine/renderer/: SD3D9Renderer.cpp  SD3D9Renderer.h  SGLRenderer.cpp  SGLRenderer.h  SRenderObject.cpp  SRenderObject.h  SRenderOption.cpp  SRenderOption.h  SRenderer.cpp  SRenderer.h  SViewport.cpp  SViewport.h  SagiRanderer.h  SagiRenderer.cpp  SagiRenderer.h  sgD3D9Renderer.cpp  sgD3D9Renderer.h  sgGLGpuProgram.cpp  sgGLGpuProgram.h  sgGLInclude.h  sgGLRenderer.cpp  sgGLRenderer.h  sgGLUtil.cpp  sgGLUtil.h  sgGpuProgram.cpp  sgGpuProgram.h  sgObjectRenderEffect.cpp  sgObjectRenderEffect.h  sgRenderEffect.cpp  sgRenderEffect.h  sgRenderEffectBase.cpp  sgRenderEffectBase.h  sgRenderEffectShadowmap.cpp  sgRenderEffectShadowmap.h  sgRenderEffectStandard.cpp  sgRenderEffectStandard.h  sgRenderObject.cpp  sgRenderObject.h  sgRenderOption.cpp  sgRenderOption.h  (+24 more)
src/engine/resource/: SAnimationDelegate.cpp  SAnimationDelegate.h  SMeshDelegate.cpp  SMeshDelegate.h  SResource.cpp  SResource.h  SResourceDelegate.cpp  SResourceDelegate.h  SResourceManager.cpp  SResourceManager.h  SSceneDelegate.cpp  SSceneDelegate.h  sgAnimation.cpp  sgAnimation.h  sgAnimationDelegate.cpp  sgAnimationDelegate.h  sgAnimationJoint.cpp  sgAnimationJoint.h  sgImageLoader.cpp  sgImageLoader.h  sgLoader.h  sgLoader_bvh.cpp  sgLoader_image.cpp  sgLoader_obj.cpp  sgLoader_pod.cpp  sgMaterial.cpp  sgMaterial.h  sgMesh.cpp  sgMesh.h  sgMeshDelegate.cpp  sgMeshDelegate.h  sgRagdollConfig.cpp  sgRagdollConfig.h  sgResource.cpp  sgResource.h  sgResourceCenter.cpp  sgResourceCenter.h  sgResourceDelegate.cpp  sgResourceDelegate.h  sgResourceManager.cpp  (+7 more)
src/engine/scenegraph/: SBaseElement.cpp  SBaseElement.h  SCamera.cpp  SCamera.h  SEntity.cpp  SEntity.h  SEsse.cpp  SEsse.h  SGrid.cpp  SGrid.h  SLight.cpp  SLight.h  SMaterial.cpp  SMaterial.h  SMesh.cpp  SMesh.h  SNode.cpp  SNode.h  SRenderQueue.cpp  SRenderQueue.h  SRenderable.cpp  SRenderable.h  SScene.cpp  SScene.h  SSceneManager.cpp  SSceneManager.h  SSceneNode.cpp  SSceneNode.h  SSceneObject.cpp  SSceneObject.h  SSimpleEntities.cpp  SSimpleEntities.h  SSkeleton.cpp  SSkeleton.h  SSubScene.cpp  SSubScene.h  STerrain.cpp  STerrain.h  sgBaseElement.cpp  sgBaseElement.h  (+42 more)
src/engine/serialization/: sgBaseArchive.cpp  sgBaseArchive.h  sgInXmlArchive.cpp  sgInXmlArchive.h  sgOutXmlArchive.cpp  sgOutXmlArchive.h  sgXmlArchive.cpp  sgXmlArchive.h  (+1 more)
src/gui/: CMakeLists.txt  GuiDef.cpp  GuiDef.h  SApplication.cpp  SApplication.h  SContext.h  SController.cpp  SController.h  SD3D9Context.h  SEvent.cpp  SEvent.h  SGLContext.h  SGraphicsApplication.h  SGraphicsFrame.cpp  SGraphicsFrame.h  SGraphicsView.cpp  SGraphicsView.h  SKeyMapping.h  SListener.cpp  SListener.h  SMainFrame.cpp  SMainFrame.h  SPaintContext.h  SRenderContext.h  SView.cpp  SView.h  SWidget.cpp  SWidget.h  SWindow.cpp  SWindow.h  SWindowDelegate.h
test/: CMakeLists.txt
test/TestUtils/: CMakeLists.txt  main.cpp  shareptr_test.cpp  shareptr_test.h
test/optimization/: CMakeLists.txt  main.cpp
(+138 files in other folders)
