include_directories(${SAGITTA_ROOT}/src)
include_directories(${SAGITTA_ROOT}/deps)

if(WIN32)
	set(DX_DIR $ENV{DXSDK_DIR})
    if(DX_DIR)
    	message(${DX_DIR})
        include_directories(${DX_DIR}Include)
        link_directories(${DX_DIR}Lib/x86)
    else(DX_DIR)
        message("DirectX SDK not found.")
    endif(DX_DIR)
endif(WIN32)

add_subdirectory(DemoCore)
add_subdirectory(Demo00_Triangle)
add_subdirectory(Demo01_Lighting)
add_subdirectory(Demo02_LoaderObj)
add_subdirectory(Demo03_SkeletonAnimation)
add_subdirectory(Demo04_GLSL)
add_subdirectory(Demo05_Texture)