include_directories(${SAGITTA_ROOT}/src)
include_directories(${SAGITTA_ROOT}/deps)

if(WIN32)
	set(DX_DIR $ENV{DXSDK_DIR})
    if(DX_DIR)
    	message(${DX_DIR})
        include_directories(${DX_DIR}Include)
        link_directories(${DX_DIR}Lib/x86)
    else(DX_DIR)
        message("DirectX SDK not found.")
    endif(DX_DIR)
endif(WIN32)

add_subdirectory(DemoCore)
add_subdirectory(Demo00_Triangle)
add_subdirectory(Demo01_Lighting)
add_subdirectory(Demo02_LoaderObj)
add_subdirectory(Demo03_SkeletonAnimation)
add_subdirectory(Demo04_GLSL)
add_subdirectory(Demo05_Texture)
add_subdirectory(Demo06_ShadowMap)
add_subdirectory(Demo07_Ragdoll)

SET_PROPERTY(TARGET DemoCore PROPERTY FOLDER "demos")
SET_PROPERTY(TARGET Demo00_Triangle PROPERTY FOLDER "demos")
SET_PROPERTY(TARGET Demo01_Lighting PROPERTY FOLDER "demos")
SET_PROPERTY(TARGET Demo02_LoaderObj PROPERTY FOLDER "demos")
SET_PROPERTY(TARGET Demo03_SkeletonAnimation PROPERTY FOLDER "demos")
SET_PROPERTY(TARGET Demo04_GLSL PROPERTY FOLDER "demos")
SET_PROPERTY(TARGET Demo05_Texture PROPERTY FOLDER "demos")
SET_PROPERTY(TARGET Demo06_ShadowMap PROPERTY FOLDER "demos")
SET_PROPERTY(TARGET Demo07_Ragdoll PROPERTY FOLDER "demos")
